# moonlight

.github/workflows/: gh-pages-deploy.yml
backend/: Cargo.toml  package-lock.json  package.json  sequences.db  tailwind.config.js
backend/migrations/: 20240114013355_ab_sequence.sql
backend/src/: main.rs  urls.rs
backend/src/apps/sequences/: mod.rs  models.rs  routes.rs  views.rs
backend/static/css/: main.css  output.css
backend/templates/: base.html  hello.html  toolbox.html
backend/templates/sequences/: detail.html  list.html
mlrs/src/: main.rs
ui/: Cargo.toml  index.html
ui/src/: main.rs
